--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>fr.whimtrip</groupId>
     <artifactId>whimtrip-ext-scrapper</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
 
     <packaging>jar</packaging>
@@ -72,29 +72,17 @@
             <version>2.5.2</version>
         </dependency>
 
-
-        <dependency>
-            <groupId>fr.whimtrip</groupId>
-            <artifactId>whimtrip-ext-htmltopojo</artifactId>
-            <version>1.0.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>fr.whimtrip</groupId>
-                    <artifactId>whimtrip-core-utils</artifactId>
-                 </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>fr.whimtrip</groupId>
-            <artifactId>whimtrip-core-utils</artifactId>
-            <version>1.0.9</version>
-        </dependency>
-
+        <!-- Jackson lib for JSON string to POJO default Object mapping implementation-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.9.0.pr4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>fr.whimtrip</groupId>
+            <artifactId>whimtrip-ext-htmltopojo</artifactId>
+            <version>1.0.1</version>
         </dependency>
 
     </dependencies>
